--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+
+    <script src="https://kit.fontawesome.com/fb90d4eac1.js" crossorigin="anonymous"></script>
   <!-- google font -->
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +26,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
-    <title>React Solution</title>
+  
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
